--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "adm-zip": "^0.5.16",
     "clsx": "^2.1.1",
     "framer-motion": "^12.26.2",
